# pre-commit-python-eol

./: .bumper.toml  .flake8  .pre-commit-config.yaml  .pre-commit-hooks.yaml  .ruff.toml  CHANGELOG.md  README.md  cached_release_cycle.json  pyproject.toml  tox.ini
.github/workflows/: bump_cache.yml  lint_test.yml  pypi_release.yml  release.yml
pre_commit_python_eol/: __init__.py  bump_cache.py  check_eol.py
tests/: test_check_eol.py
